--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "builds": [
     { "src": "index.html", "use": "@vercel/static" },
     { "src": "script.js", "use": "@vercel/static" },
     { "src": "style.css", "use": "@vercel/static" },
     { "src": "assets/**", "use": "@vercel/static" },
-    { "src": "api/**/*.ts", "use": "@vercel/node" }
+    { "src": "api/**/*.ts", "use": "@vercel/node@2.0.0" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
